gitops/sonarr1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr1
  labels:
    app: sonarr1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr1
  template:
    metadata:
      labels:
        app: sonarr1
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - name: sonarr1
        image: ghcr.io/onedr0p/sonarr-develop:4.0.8.2008
        imagePullPolicy: Always
        ports:
        - containerPort: 8989
        volumeMounts:
        - name: sonarr1-config
          mountPath: /config
        - name: data
          mountPath: /data
      volumes:
      - name: sonarr1-config
        persistentVolumeClaim:
          claimName: sonarr1-config
      - name: data
        hostPath:
          path: /data
          type: Directory
