gitops/sonarr1/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr1
  namespace: sonarr1
spec:
  parentRefs:
  - name: main
    namespace: cilium-gateway
    sectionName: https-sonarr1
  hostnames:
  - sonarr1.sync.lt
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: sonarr1
      port: 80
